# the-way-out

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  VERSIONING.md  audio.py  build_mac.sh  build_mac_intel.sh  editor.py  effects.py  interactables.py  launcher.py  level_catalog.py  levels.py  loading_screen.py  main.py  menu.py  objects.py  pyproject.toml  save.py  settings.py  static_objects.py  theme.py  tiles.py  tileset.py  two_notes.txt  units.py  updater.py  version.py
.github/workflows/: ci.yml
assets/: icon.icns
assets/levels/: LEGEND.md  level_1.txt  level_2.txt  level_3.txt  level_4.txt  level_5.txt  manifest.json
lvls/: lvl1.py
scripts/: gen_sfx.py  make_icon.py  render_logo.swift
tests/: conftest.py  test_cooldowns.py  test_level_parser.py  test_pressure_plate.py
